<resources>
    <string name="app_name">WMTHemalPractical</string>

    <string name="progress">Loading.....</string>
    <string name="no_internet_connection">No Internet Connection. Please turn on internet.</string>

    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>