<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".activity.RegistrationActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/padding_margin"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/round_corner_large"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:strokeColor="@color/white"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Title-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/purple_500"
                android:gravity="center"
                android:padding="@dimen/padding_margin"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_headline_5_regular"
                android:visibility="gone"/>

            <!--User Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    tools:text="Hemal123" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Email Address-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="text"
                    tools:text="hemal.om@gmail.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:text="Hemal@1234" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Confirm Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    tools:text="Hemal@1234" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Login Button-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/purple_500"
                android:gravity="center"
                android:padding="@dimen/padding_margin"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_headline_6_medium" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>